# testJDsALES

./: .replit  README.md  USAGE.md  VSCODE_SETUP.md  app.py  pyproject.toml  replit.md  requirements.txt
utils/: __init__.py  jd_scraper.py
