[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.5",
    # Corporate PyPI mirror currently provides pandas up to 2.0.3
    "pandas>=2.0,<2.1",

    # Corporate PyPI mirror currently provides Playwright up to 1.48.0
    "playwright>=1.45,<1.49",

    "httpx>=0.27.0",
    "streamlit>=1.50.0",
    "trafilatura>=2.0.0",
    "xlsxwriter>=3.2.9",
]
